--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # State management
+  flutter_riverpod: ^2.3.7
+
   # Code generation for data classes
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
