--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,26 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    
+    <!-- 
+    <queries>          
+        <package android:name="com.instagram.android" />
+        <package android:name="com.zhiliaoapp.musically" />
+        <package android:name="com.facebook.katana" />
+        <package android:name="com.facebook.orca" />
+        <package android:name="org.telegram.messenger" />
+        <package android:name="com.whatsapp" />
+        <package android:name="com.twitter.android" />
+    
+        <provider android:authorities="com.facebook.katana.provider.PlatformProvider" /> 
+        <provider android:authorities="com.facebook.orca.provider.PlatformProvider" />
+    </queries>
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" /> 
+    -->
+
     <application
         android:label="rick_and_morty_app"
         android:name="${applicationName}"
@@ -29,5 +51,34 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <!--
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.com.shekarmudaliyar.social_share"
+            android:exported="false"
+            android:grantUriPermissions="true"
+            tools:replace="android:authorities">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths" />
+        </provider>
+        -->
+    <!--
+    <provider 
+        android:name="androidx.core.content.FileProvider" 
+        android:authorities="${applicationId}.provider"
+        android:exported="false" 
+        android:grantUriPermissions="true">
+        <meta-data 
+            android:name="android.support.FILE_PROVIDER_PATHS" 
+            android:resource="@xml/provider_paths_app" />
+    </provider>
+
+        <provider android:name="com.facebook.FacebookContentProvider" android:authorities="com.facebook.app.FacebookContentProvider827306875547131"
+            android:exported="true" />
+            <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id" />
+            <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token" />
+    -->
     </application>
 </manifest>
