--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,7 @@ jobs:
           flutter-version: '3.13.1'
           channel: 'stable'
           cache: true
-      - uses: bluefireteam/melos-action@v1
-      - name: Install dependencies for all packages
-        run: melos build:pub_get:all
+      - name: Get all packages
+        run: ../../scripts/get_all.sh
       - name: Test all packages
         run: ../../scripts/test_all.sh
