--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   flutter_test:
-    name: Run flutter test and analyze
+    name: Run flutter test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -14,30 +14,14 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: "12.x"
+          cache: 'gradle'
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.13.1'
           channel: 'stable'
-      - run: flutter pub get
-      - run: flutter analyze
-      - run: flutter test
-
-  build_android:
-    name: Build Flutter Android(appbundle)
-    needs: [flutter_test]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: "12.x"
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.13.1'
-          channel: 'stable'
-      - name: Get dependencies
-        run: flutter pub get
-      - name: Build android appbundle
-        run: flutter build appbundle
-  
+          cache: true
+      - name: Get all packages
+        run: ./scripts/get_all.sh
+      - name: Test all packages
+        run: ./scripts/test_all.sh
+        
