--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,7 @@ jobs:
           firebase appdistribution:distribute ./build/app/outputs/flutter-apk/app-dev-debug.apk \
             --app ${{ secrets.FIREBASE_APP_ID }} \
             --token ${{ secrets.FIREBASE_TOKEN }} \
-            --release-notes "This is an automated build."
-            --testers "burak.kurtarir35@gmail.com"
+            --release-notes "This is an automated build." --testers "burak.kurtarir35@gmail.com"
         env:
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
